js/js.translator/testData/incremental/invalidation/topLevelSideEffectMoveBetweenFiles/lib1/second.1.kt
val sideEffectMarker = run {
    result = "A1"
    0
}
